--- a/index.html
+++ b/index.html
@@ -1,49 +1,57 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <title>Document</title>
-    <link rel="stylesheet" href="index.css">
+    <title>Books Shop</title>
+    <link rel="stylesheet" type="text/css" href="index.css">
 </head>
 <body>
     <header>
         <nav>
-            <a href="#">Home</a>
-            <a href="#"></a>
-            <a href="#"></a>
-            <a href="#"></a>
+            <a href="#">Главная</a>
+            <a href="#">О нас</a>
+            <a href="#">Категория</a>
+            <a href="#">Анонсы</a>
         </nav>
-
+       <div id = "searching">
+            <input type="text"  placeholder="Искать товар">
+            <button>Найти</button>
+       </div>        
     </header>
     <main>
-        <cards>     
-            <card>
-                <img src="img/samsung.jpg"></img>
-                <a>samsung galaxy s20</a>
-            </card> 
+          <div id = "collections">
+                <div class = "card">
+                    <img src = "img/HarryPotter.jpg" class = "book">
+                    <p class = "name">Гарри Поттер и филосовский камень</p>
+                </div>
+                <div class = "card">
+                    <img src = "img/HarryPotter.jpg" class = "book">
+                    <p class = "name">Гарри Поттер и филосовский камень</p>
+                </div>
+                <div class = "card">
+                    <img src = "img/HarryPotter.jpg" class = "book">
+                    <p class = "name">Гарри Поттер и филосовский камень</p>
+                </div>
+                <div class = "card">
+                    <img src = "img/HarryPotter.jpg" class = "book">
+                    <p class = "name">Гарри Поттер и филосовский камень</p>
+                </div>
+                <div class = "card">
+                    <img src = "img/HarryPotter.jpg" class = "book">
+                    <p class = "name">Гарри Поттер и филосовский камень</p>
+                </div>
+                <div class = "card">
+                    <img src = "img/HarryPotter.jpg" class = "book">
+                    <p class = "name">Гарри Поттер и филосовский камень</p>
+                </div>
+                <div class = "card">
+                    <img src = "img/HarryPotter.jpg" class = "book">
+                    <p class = "name">Гарри Поттер и филосовский камень</p>
+                </div>
 
-            <card>
-                <img src="img/samsung.jpg"></img>
-                <a>samsung galaxy s20</a>
-            </card>
-
-            <card>
-                <img src="img/samsung.jpg"></img>
-                <a>samsung galaxy s20</a>
-            </card>
-
-            <card>
-                <img src="img/samsung.jpg"></img>
-                <a>samsung galaxy s20</a>
-            </card>
-
-            <card>
-                <img src="img/samsung.jpg"></img>
-                <a>samsung galaxy s20</a>
-            </card>
-        </cards>   
+          <div>
+          
     </main>
     <footer>
-        <p>@spide008.s0@gmail.com</p>
+        <p>WebPage@gmail.com</p>
     </footer>
 </body>
 </html>
