--- a/index.html
+++ b/index.html
@@ -1,54 +1,66 @@
+<!DOCTYPE html>
 <html>
 <head>
     <title>Books Shop</title>
-    <link rel="stylesheet" type="text/css" href="index.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Itim&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
         <nav>
-            <a href="#">Главная</a>
-            <a href="#">О нас</a>
-            <a href="#">Категория</a>
-            <a href="#">Анонсы</a>
+            <div id = "logo">
+                InBook
+            </div>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="#">About us</a></li>
+                <li><a href="#">Books</a></li>
+                <li><a href="#">Admin</a></li>
+            </ul>
         </nav>
-       <div id = "searching">
-            <input type="text"  placeholder="Искать товар">
-            <button>Найти</button>
-       </div>        
     </header>
-    <main>
-          <div id = "collections">
-                <div class = "card">
-                    <img src = "img/HarryPotter.jpg" class = "book">
-                    <p class = "name">Гарри Поттер и филосовский камень</p>
-                </div>
-                <div class = "card">
-                    <img src = "img/HarryPotter.jpg" class = "book">
-                    <p class = "name">Гарри Поттер и филосовский камень</p>
-                </div>
-                <div class = "card">
-                    <img src = "img/HarryPotter.jpg" class = "book">
-                    <p class = "name">Гарри Поттер и филосовский камень</p>
-                </div>
-                <div class = "card">
-                    <img src = "img/HarryPotter.jpg" class = "book">
-                    <p class = "name">Гарри Поттер и филосовский камень</p>
-                </div>
-                <div class = "card">
-                    <img src = "img/HarryPotter.jpg" class = "book">
-                    <p class = "name">Гарри Поттер и филосовский камень</p>
-                </div>
-                <div class = "card">
-                    <img src = "img/HarryPotter.jpg" class = "book">
-                    <p class = "name">Гарри Поттер и филосовский камень</p>
-                </div>
-                <div class = "card">
-                    <img src = "img/HarryPotter.jpg" class = "book">
-                    <p class = "name">Гарри Поттер и филосовский камень</p>
-                </div>
+    <main>  
+         <h1>
+             Bestsellers
+         </h1>
+         <div class="row">
+             <div class="col-2">
+                <h2>
+                    The Lord of the Rings
+                </h2>
+                <p>
+                    The Lord of the Rings is an epic high fantasy novel by the English author and scholar J. R. R. Tolkien. Set in Middle-earth, 
+                    the world at some distant time in the past, the story began as a sequel to Tolkien's 1937 children's book The Hobbit,
+                    but eventually developed into a much larger work. Written in stages between 1937 and 1949, 
+                    The Lord of the Rings is one of the best-selling books ever written, with over 150 million copies sold.
+                </p>
+             </div>
+             <div class="col-2 import">
+                <img src="img/Bestseller1.jpg">
 
-          <div>
-          
+                <p class = "price">19.99$</p>
+            </div>
+         </div>
+         <div class="row">
+            <div class="col-2 import">
+                <img src="img/Bestseller2.jpg">
+
+                <p class = "price">24.99$</p>
+            </div>
+            <div class="col-2" >
+               <h2>
+                    Harry Potter and the Philosopher's Stone
+               </h2>
+               <p>
+                Harry Potter and the Philosopher's Stone is a fantasy novel written by British author J. K. Rowling.
+                The first novel in the Harry Potter series and Rowling's debut novel, it follows Harry Potter,
+                a young wizard who discovers his magical heritage on his eleventh birthday, when he receives a letter 
+                of acceptance to Hogwarts School of Witchcraft and Wizardry. Harry makes close friends and a few enemies during his
+                first year at the school, and with the help of his friends, Harry faces an attempted comeback by the dark wizard Lord Voldemort,
+                who killed Harry's parents, but failed to kill Harry when he was just 15 months old.
+               </p>
+            </div>
+        </div>
     </main>
     <footer>
         <p>WebPage@gmail.com</p>
