--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="#">About us</a></li>
-                <li><a href="#">Books</a></li>
+                <li><a href="books.html">Books</a></li>
                 <li><a href="#">Admin</a></li>
             </ul>
         </nav>
