--- a/books.html
+++ b/books.html
@@ -23,27 +23,27 @@
         <div class = "cards">
             <div class = "card">
                 <img src="img/book1.jpg">
-                <a class = "name">In Search of Lost Time</a>
+                <a class = "name" href="elementPage.html">In Search of Lost Time</a>
                 <p class="price">10.99$</p>
             </div>
             <div class = "card">
                 <img src="img/book1.jpg">
-                <a class = "name">In Search of Lost Time</a>
+                <a class = "name" href="elementPage.html">In Search of Lost Time</a>
                 <p class="price">10.99$</p>
             </div>
             <div class = "card">
                 <img src="img/book1.jpg">
-                <a class = "name">In Search of Lost Time</a>
+                <a class = "name" href="elementPage.html">In Search of Lost Time</a>
                 <p class="price">10.99$</p>
             </div>
             <div class = "card">
                 <img src="img/book1.jpg">
-                <a class = "name">In Search of Lost Time</a>
+                <a class = "name" href="elementPage.html">In Search of Lost Time</a>
                 <p class="price">10.99$</p>
             </div>
             <div class = "card">
                 <img src="img/book1.jpg">
-                <a class = "name">In Search of Lost Time</a>
+                <a class = "name" href="elementPage.html">In Search of Lost Time</a>
                 <p class="price">10.99$</p>
             </div>
         </div>  
