--- a/adminPage.html
+++ b/adminPage.html
@@ -1,8 +1,9 @@
-<!DOCTYPE html>
 <html>
 <head>
-    <title>Books Shop</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <meta charset="UTF-8">
+
+    <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="style4.css">
     <link href="https://fonts.googleapis.com/css2?family=Itim&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -25,31 +26,40 @@
                 <img src="img/book1.png">
                 <a class = "name" href="elementPage.html">In Search of Lost Time</a>
                 <p class="price">10.99$</p>
+                <a class = "delete">delete</a>
             </div>
             <div class = "card">
                 <img src="img/book1.png">
                 <a class = "name" href="elementPage.html">In Search of Lost Time</a>
                 <p class="price">10.99$</p>
+                <a class = "delete">delete</a>
             </div>
             <div class = "card">
                 <img src="img/book1.png">
                 <a class = "name" href="elementPage.html">In Search of Lost Time</a>
                 <p class="price">10.99$</p>
+                <a class = "delete">delete</a>
             </div>
             <div class = "card">
                 <img src="img/book1.png">
                 <a class = "name" href="elementPage.html">In Search of Lost Time</a>
                 <p class="price">10.99$</p>
+                <a class = "delete">delete</a>
             </div>
             <div class = "card">
                 <img src="img/book1.png">
                 <a class = "name" href="elementPage.html">In Search of Lost Time</a>
                 <p class="price">10.99$</p>
+                <a class = "delete">delete</a>
+            </div>
+            <div id = "adding">
+                <img src = "img/adding.png">
+                <a href = "createPage.html">Add</a>
             </div>
         </div>  
     </main>
     <footer>
-        <p>WebPage@gmail.com</p>
+        WebPage@gmail.com
     </footer>
 </body>
 </html>
