--- a/createPage.html
+++ b/createPage.html
@@ -1,9 +1,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style3.css">
-    <link href="https://fonts.googleapis.com/css2?family=Itim&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/css/{{this}}">
+    <link href="https://fonts.googleapis.com/css2?family=Itim&display=swap" type="text/css" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
