--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="#">About us</a></li>
                 <li><a href="books.html">Books</a></li>
-                <li><a href="#">Admin</a></li>
+                <li><a href="adminPage.html">Admin</a></li>
             </ul>
         </nav>
     </header>
