--- a/adminPage.html
+++ b/adminPage.html
@@ -12,6 +12,18 @@
             <div id = "logo">
                 InBook
             </div>
+            <div id = "Search">
+                <input type="text" placeholder = "search a book">
+                <button type = "submit" >Search</button>
+            </div>
+            <div id = "filt">   
+                <button id = "filt_price">filter by price</button>
+                <label>filter by genre</label>
+                <select  id="category">
+                    <option value="Thriller">Thriller</option>
+                    <option value="Fantasy">Fantasy</option>
+            </select>
+            </div>  
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="#">About us</a></li>
