--- a/createPage.html
+++ b/createPage.html
@@ -1,7 +1,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="/css/{{this}}">
+    <link rel="stylesheet" href="style3.css">
     <link href="https://fonts.googleapis.com/css2?family=Itim&display=swap" type="text/css" rel="stylesheet">
     <title>Document</title>
 </head>
