--- a/adminPage.html
+++ b/adminPage.html
@@ -34,36 +34,6 @@
     </header>
     <main>
         <div class = "cards">
-            <div class = "card">
-                <img src="img/book1.png">
-                <a class = "name" href="elementPage.html">In Search of Lost Time</a>
-                <p class="price">10.99$</p>
-                <a class = "delete">delete</a>
-            </div>
-            <div class = "card">
-                <img src="img/book1.png">
-                <a class = "name" href="elementPage.html">In Search of Lost Time</a>
-                <p class="price">10.99$</p>
-                <a class = "delete">delete</a>
-            </div>
-            <div class = "card">
-                <img src="img/book1.png">
-                <a class = "name" href="elementPage.html">In Search of Lost Time</a>
-                <p class="price">10.99$</p>
-                <a class = "delete">delete</a>
-            </div>
-            <div class = "card">
-                <img src="img/book1.png">
-                <a class = "name" href="elementPage.html">In Search of Lost Time</a>
-                <p class="price">10.99$</p>
-                <a class = "delete">delete</a>
-            </div>
-            <div class = "card">
-                <img src="img/book1.png">
-                <a class = "name" href="elementPage.html">In Search of Lost Time</a>
-                <p class="price">10.99$</p>
-                <a class = "delete">delete</a>
-            </div>
             <div id = "adding">
                 <img src = "img/adding.png">
                 <a href = "createPage.html">Add</a>
@@ -73,5 +43,6 @@
     <footer>
         WebPage@gmail.com
     </footer>
+    <script src="script3.js" defer></script>
 </body>
 </html>
