--- a/elementPage.html
+++ b/elementPage.html
@@ -22,25 +22,12 @@
     </header>
     <main>
         <div id = "element">
-            <div class = "card">
-                <img src="img/book1.png">
-                <a class = "name">In Search of Lost Time</a>
-                <p class="price">10.99$</p>
-            </div>
-            <div id = "descripton">
-                <h1>Description</h1>
-                In Search of Lost Time also translated as Remembrance of Things Past, is a novel in seven volumes 
-                by Marcel Proust (1871–1922). It is his most prominent work, known both for its length and its theme 
-                of involuntary memory; the most famous example of this is the "episode of the madeleine," which occurs 
-                early in the first volume. It gained fame in English in translations by C. K. Scott Moncrieff and Terence 
-                Kilmartin as Remembrance of Things Past, but the title In Search of Lost Time, a literal rendering of the French,
-                became ascendant after D. J. Enright adopted it for his revised translation published in 1992.
-            </div>
+
         </div>  
     </main>
     <footer>
         <p>WebPage@gmail.com</p>
     </footer>
-    <script src = "server.js" defer></script>
+    <script src = "script2.js" defer></script>
 </body>
 </html>
