--- a/books.html
+++ b/books.html
@@ -37,35 +37,12 @@
     <main>
       
         <div class = "cards">
-           <div class = "card">
-                <img src="img/book1.png">
-                <a class = "name" href="elementPage.html?name='losttime'">In Search of Lost Time</a>
-                <p class="price">10.99$</p>
-            </div> 
-            <div class = "card">
-                <img src="img/book1.png">
-                <a class = "name" href="elementPage.html">In Search of Lost Time</a>
-                <p class="price">10.99$</p>
-            </div>
-            <div class = "card">
-                <img src="img/book1.png">
-                <a class = "name" href="elementPage.html">In Search of Lost Time</a>
-                <p class="price">10.99$</p>
-            </div>
-            <div class = "card">
-                <img src="img/book1.png">
-                <a class = "name" href="elementPage.html">In Search of Lost Time</a>
-                <p class="price">10.99$</p>
-            </div>
-            <div class = "card">
-                <img src="img/book1.png">
-                <a class = "name" href="elementPage.html">In Search of Lost Time</a>
-                <p class="price">10.99$</p>
-            </div>
+
         </div>  
     </main>
     <footer>
         <p>WebPage@gmail.com</p>
     </footer>
+    <script src = "script1.js" defer></script>
 </body>
 </html>
