--- a/adminPage.html
+++ b/adminPage.html
@@ -1,10 +1,11 @@
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="UTF-8">
-
-    <title>Document</title>
+    <title>Book Shop</title>
     <link rel="stylesheet" type="text/css" href="style4.css">
     <link href="https://fonts.googleapis.com/css2?family=Itim&display=swap" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
     <header>
@@ -18,11 +19,6 @@
             </div>
             <div id = "filt">   
                 <button id = "filt_price">filter by price</button>
-                <label>filter by genre</label>
-                <select  id="category">
-                    <option value="Thriller">Thriller</option>
-                    <option value="Fantasy">Fantasy</option>
-            </select>
             </div>  
             <ul>
                 <li><a href="index.html">Home</a></li>
