--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Books Shop</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Itim&display=swap" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
     <header>
@@ -37,15 +38,14 @@
              </div>
              <div class="col-2 import">
                 <img src="img/Bestseller1.jpg">
-
-                <p class = "price">19.99$</p>
+                <p class = "price">$19.99</p>
             </div>
          </div>
          <div class="row">
             <div class="col-2 import">
                 <img src="img/Bestseller2.jpg">
 
-                <p class = "price">24.99$</p>
+                <p class = "price">$24.99</p>
             </div>
             <div class="col-2" >
                <h2>
