--- a/books.html
+++ b/books.html
@@ -4,6 +4,7 @@
     <title>Books Shop</title>
     <link rel="stylesheet" type="text/css" href="style5.css">
     <link href="https://fonts.googleapis.com/css2?family=Itim&display=swap" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
     <header>
@@ -19,11 +20,6 @@
          
             <div id = "filt">   
                 <button id = "filt_price">filter by price</button>
-                <label>filter by genre</label>
-                <select  id="category">
-                    <option value="Thriller">Thriller</option>
-                    <option value="Fantasy">Fantasy</option>
-            </select>
             </div>    
             <ul>
                 <li><a href="index.html">Home</a></li>
