--- a/elementPage.html
+++ b/elementPage.html
@@ -4,7 +4,7 @@
     <title>Books Shop</title>
     <link rel="stylesheet" type="text/css" href="style2.css">
     <link href="https://fonts.googleapis.com/css2?family=Itim&display=swap" rel="stylesheet">
-    
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
     <header>
